manifests/ente/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ente-museum
spec:
  type: ClusterIP
  selector:
    app: ente-museum
  ports:
  - name: http
    port: 8080
    targetPort: 8080
