manifests/ente/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ente-museum
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: ente-api.jmly.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ente-museum
            port:
              number: 8080
